--- a/src/FubuValidation/packages.config
+++ b/src/FubuValidation/packages.config
@@ -2,6 +2,8 @@
 <packages>
   <package id="CommonServiceLocator" version="1.0" />
   <package id="FubuCore" version="0.9.2.71" />
+  <package id="FubuCore" version="0.9.2.82" />
   <package id="FubuLocalization" version="0.9.2.71" />
+  <package id="FubuLocalization" version="0.9.2.82" />
   <package id="HtmlTags" version="1.0.0.23" />
 </packages>
