--- a/src/FubuMVC.Validation.Tests/FubuMVC.Validation.Tests.csproj
+++ b/src/FubuMVC.Validation.Tests/FubuMVC.Validation.Tests.csproj
@@ -38,7 +38,7 @@
       <HintPath>..\packages\FubuCore.0.9.4.105\lib\FubuCore.dll</HintPath>
     </Reference>
     <Reference Include="FubuLocalization">
-      <HintPath>..\packages\FubuLocalization.0.9.4.105\lib\FubuLocalization.dll</HintPath>
+      <HintPath>..\packages\FubuLocalization.0.9.4.106\lib\FubuLocalization.dll</HintPath>
     </Reference>
     <Reference Include="FubuMVC.Core">
       <HintPath>..\packages\FubuMVC.References.0.9.3.696\lib\net40\FubuMVC.Core.dll</HintPath>
@@ -93,6 +93,7 @@
     <Compile Include="FubuRequestInputModelResolverTester.cs" />
     <Compile Include="FubuValidationEngineTester.cs" />
     <Compile Include="LambdaFubuContinuationModelResolverTester.cs" />
+    <Compile Include="ModelBindingErrorsTester.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Registration\ValidationFailureExpressionTester.cs" />
     <Compile Include="SampleInputModel.cs" />
