--- a/src/FubuMVC.Validation/FubuMVC.Validation.csproj
+++ b/src/FubuMVC.Validation/FubuMVC.Validation.csproj
@@ -40,7 +40,7 @@
       <HintPath>..\packages\FubuCore.0.9.4.105\lib\FubuCore.dll</HintPath>
     </Reference>
     <Reference Include="FubuLocalization">
-      <HintPath>..\packages\FubuLocalization.0.9.4.105\lib\FubuLocalization.dll</HintPath>
+      <HintPath>..\packages\FubuLocalization.0.9.4.106\lib\FubuLocalization.dll</HintPath>
     </Reference>
     <Reference Include="FubuMVC.Core">
       <HintPath>..\packages\FubuMVC.References.0.9.3.696\lib\net40\FubuMVC.Core.dll</HintPath>
@@ -82,6 +82,7 @@
     <Compile Include="IAjaxContinuationActivator.cs" />
     <Compile Include="IAjaxContinuationDecorator.cs" />
     <Compile Include="IAjaxContinuationResolver.cs" />
+    <Compile Include="ModelBindingErrors.cs" />
     <Compile Include="StandardAjaxContinuationDecorator.cs" />
     <Compile Include="ValidationContinuationHandler.cs" />
     <Compile Include="FubuContinuationFailurePolicy.cs" />
