--- a/src/FubuMVC.Validation/FubuMVC.Validation.csproj
+++ b/src/FubuMVC.Validation/FubuMVC.Validation.csproj
@@ -77,6 +77,7 @@
     <Compile Include="AjaxContinuationActivator.cs" />
     <Compile Include="AjaxContinuationFailurePolicy.cs" />
     <Compile Include="AjaxContinuationResolver.cs" />
+    <Compile Include="AjaxExtensions.cs" />
     <Compile Include="ConfiguredFubuContinuationResolver.cs" />
     <Compile Include="IAjaxContinuationActivator.cs" />
     <Compile Include="IAjaxContinuationDecorator.cs" />
