--- a/src/FubuMVC.Validation.Tests/FubuMVC.Validation.Tests.csproj
+++ b/src/FubuMVC.Validation.Tests/FubuMVC.Validation.Tests.csproj
@@ -41,7 +41,7 @@
       <HintPath>..\packages\FubuKayak.0.9.5.817\lib\net40\FubuKayak.dll</HintPath>
     </Reference>
     <Reference Include="FubuLocalization">
-      <HintPath>..\packages\Serenity.0.9.5.804\lib\net40\FubuLocalization.dll</HintPath>
+      <HintPath>..\packages\FubuLocalization.0.9.5.14\lib\FubuLocalization.dll</HintPath>
     </Reference>
     <Reference Include="FubuMVC.Core">
       <HintPath>..\packages\FubuMVC.References.0.9.5.817\lib\net40\FubuMVC.Core.dll</HintPath>
@@ -54,24 +54,6 @@
     </Reference>
     <Reference Include="FubuTestingSupport">
       <HintPath>..\packages\FubuTestingSupport.0.9.8.130\lib\FubuTestingSupport.dll</HintPath>
-    </Reference>
-    <Reference Include="Gate">
-      <HintPath>..\packages\Serenity.0.9.5.804\lib\net40\Gate.dll</HintPath>
-    </Reference>
-    <Reference Include="Gate.Kayak">
-      <HintPath>..\packages\Serenity.0.9.5.804\lib\net40\Gate.Kayak.dll</HintPath>
-    </Reference>
-    <Reference Include="HtmlTags">
-      <HintPath>..\packages\Serenity.0.9.5.804\lib\net40\HtmlTags.dll</HintPath>
-    </Reference>
-    <Reference Include="Ionic.Zip">
-      <HintPath>..\packages\Serenity.0.9.5.804\lib\net40\Ionic.Zip.dll</HintPath>
-    </Reference>
-    <Reference Include="Kayak">
-      <HintPath>..\packages\Serenity.0.9.5.804\lib\net40\Kayak.dll</HintPath>
-    </Reference>
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>..\packages\Serenity.0.9.5.804\lib\net40\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="nunit.framework">
       <HintPath>..\packages\NUnit.2.5.10.11092\lib\nunit.framework.dll</HintPath>
@@ -91,14 +73,8 @@
     <Reference Include="Serenity">
       <HintPath>..\packages\Serenity.0.9.5.817\lib\net40\Serenity.dll</HintPath>
     </Reference>
-    <Reference Include="SerenityRunner">
-      <HintPath>..\packages\Serenity.0.9.5.804\lib\net40\SerenityRunner.exe</HintPath>
-    </Reference>
-    <Reference Include="StoryTeller">
-      <HintPath>..\packages\Serenity.0.9.5.804\lib\net40\StoryTeller.dll</HintPath>
-    </Reference>
     <Reference Include="StructureMap">
-      <HintPath>..\packages\Serenity.0.9.5.804\lib\net40\StructureMap.dll</HintPath>
+      <HintPath>..\packages\structuremap.2.6.3\lib\StructureMap.dll</HintPath>
     </Reference>
     <Reference Include="StructureMap.AutoMocking">
       <HintPath>..\packages\structuremap.automocking.2.6.3\lib\StructureMap.AutoMocking.dll</HintPath>
