--- a/packaging/nuget/fubumvc.validation.nuspec
+++ b/packaging/nuget/fubumvc.validation.nuspec
@@ -14,6 +14,7 @@
     <dependencies>
       <dependency id="FubuMVC.References" version="0.9.5.804" />
       <dependency id="FubuValidation" />
+      <dependency id="FubuCore" version="0.9.9.139" />
     </dependencies>
   </metadata>
   <files>
