--- a/packaging/nuget/fubuvalidation.nuspec
+++ b/packaging/nuget/fubuvalidation.nuspec
@@ -14,6 +14,7 @@
     <dependencies>
       <dependency id="FubuLocalization" />
       <dependency id="HtmlTags" />
+      <dependency id="FubuCore" version="0.9.9.139" />
     </dependencies>
   </metadata>
   <files>
