--- a/src/FubuMVC.Validation.Tests/FubuMVC.Validation.Tests.csproj
+++ b/src/FubuMVC.Validation.Tests/FubuMVC.Validation.Tests.csproj
@@ -117,14 +117,18 @@
   <ItemGroup>
     <Compile Include="AjaxContinuationResolverTester.cs" />
     <Compile Include="AjaxValidationActionFilterTester.cs" />
+    <Compile Include="CompositeChainFilterTester.cs" />
     <Compile Include="FubuValidationEngineTester.cs" />
+    <Compile Include="HasInputTypeTester.cs" />
     <Compile Include="ModelBindingErrorsTester.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SampleInputModel.cs" />
     <Compile Include="SmokeTests.cs" />
     <Compile Include="AjaxValidationTester.cs" />
     <Compile Include="ValidationActionFilterTester.cs" />
+    <Compile Include="ValidationConventionTester.cs" />
     <Compile Include="ValidationFilterTester.cs" />
+    <Compile Include="DefaultValidationFilterTester.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\FubuMVC.Validation\FubuMVC.Validation.csproj">
