--- a/src/FubuMVC.Validation/FubuMVC.Validation.csproj
+++ b/src/FubuMVC.Validation/FubuMVC.Validation.csproj
@@ -76,6 +76,10 @@
     <Compile Include="AjaxValidation.cs" />
     <Compile Include="AjaxContinuationResolver.cs" />
     <Compile Include="AjaxValidationActionFilter.cs" />
+    <Compile Include="CompositeChainFilter.cs" />
+    <Compile Include="DefaultValidationChainFilter.cs" />
+    <Compile Include="HasInputType.cs" />
+    <Compile Include="ValidationConvention.cs" />
     <Compile Include="ValidationFilter.cs" />
     <Compile Include="ModelBindingErrors.cs" />
     <Compile Include="FubuValidation.cs" />
