--- a/src/FubuMVC.Validation.Tests/FubuMVC.Validation.Tests.csproj
+++ b/src/FubuMVC.Validation.Tests/FubuMVC.Validation.Tests.csproj
@@ -117,13 +117,13 @@
   <ItemGroup>
     <Compile Include="AjaxContinuationResolverTester.cs" />
     <Compile Include="AjaxValidationActionFilterTester.cs" />
+    <Compile Include="AjaxValidationFailureHandlerTester.cs" />
     <Compile Include="CompositeChainFilterTester.cs" />
     <Compile Include="FubuValidationEngineTester.cs" />
     <Compile Include="HasInputTypeTester.cs" />
     <Compile Include="ModelBindingErrorsTester.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SampleInputModel.cs" />
-    <Compile Include="SmokeTests.cs" />
     <Compile Include="AjaxValidationTester.cs" />
     <Compile Include="ValidationActionFilterTester.cs" />
     <Compile Include="ValidationConventionTester.cs" />
