--- a/src/FubuMVC.Validation/FubuMVC.Validation.csproj
+++ b/src/FubuMVC.Validation/FubuMVC.Validation.csproj
@@ -75,15 +75,17 @@
     </Compile>
     <Compile Include="AjaxValidation.cs" />
     <Compile Include="AjaxContinuationResolver.cs" />
-    <Compile Include="AjaxValidationActionFilter.cs" />
+    <Compile Include="IAjaxValidationFailureHandler.cs" />
+    <Compile Include="AjaxValidationBehavior.cs" />
     <Compile Include="CompositeChainFilter.cs" />
     <Compile Include="DefaultValidationChainFilter.cs" />
     <Compile Include="HasInputType.cs" />
     <Compile Include="ValidationConvention.cs" />
     <Compile Include="ValidationFilter.cs" />
     <Compile Include="ModelBindingErrors.cs" />
-    <Compile Include="FubuValidation.cs" />
+    <Compile Include="FubuMvcValidation.cs" />
     <Compile Include="ValidationActionFilter.cs" />
+    <Compile Include="AjaxValidationNode.cs" />
     <Compile Include="ValidationSettings.cs" />
   </ItemGroup>
   <ItemGroup>
