--- a/src/FubuMVC.Validation/FubuMVC.Validation.csproj
+++ b/src/FubuMVC.Validation/FubuMVC.Validation.csproj
@@ -97,12 +97,14 @@
     <Content Include="content\scripts\fubuvalidation.client.js" />
     <Content Include="content\scripts\fubuvalidation.client.rules.js" />
     <Content Include="content\scripts\fubuvalidation.js" />
+    <Content Include="content\scripts\fubuvalidation.localization.js" />
     <Content Include="content\scripts\lib\jquery-1.7.min.js" />
     <Content Include="content\scripts\lib\jquery.continuations.forms.js" />
     <Content Include="content\scripts\lib\jquery.continuations.js" />
     <Content Include="content\scripts\lib\jquery.form.js" />
     <Content Include="content\scripts\lib\sinon-1.2.0.js" />
     <Content Include="content\scripts\lib\underscore-min.js" />
+    <Content Include="content\scripts\specs\fubuvalidation.localization.spec.js" />
     <Content Include="content\scripts\specs\fubuvalidation.client.rules.spec.js" />
     <Content Include="content\scripts\specs\fubuvalidation.client.spec.js" />
     <Content Include="content\scripts\specs\fubuvalidation.fixture.html" />
