--- a/src/FubuMVC.Validation/FubuMVC.Validation.csproj
+++ b/src/FubuMVC.Validation/FubuMVC.Validation.csproj
@@ -75,6 +75,8 @@
     </Compile>
     <Compile Include="AjaxValidation.cs" />
     <Compile Include="AjaxContinuationResolver.cs" />
+    <Compile Include="FubuMvcValidationServices.cs" />
+    <Compile Include="FubuValidationServiceRegistry.cs" />
     <Compile Include="RegisterRemoteRuleQuery.cs" />
     <Compile Include="RemoteRuleExpression.cs" />
     <Compile Include="Remote\IRemoteFieldValidationRule.cs" />
