--- a/src/FubuValidation/FubuValidation.csproj
+++ b/src/FubuValidation/FubuValidation.csproj
@@ -85,6 +85,7 @@
     <Compile Include="GreaterOrEqualToZeroAttribute.cs" />
     <Compile Include="GreaterThanZeroAttribute.cs" />
     <Compile Include="IValidated.cs" />
+    <Compile Include="IValidationRegistration.cs" />
     <Compile Include="IValidationRule.cs" />
     <Compile Include="IValidationSource.cs" />
     <Compile Include="IValidator.cs" />
@@ -107,7 +108,6 @@
     <Compile Include="ValidationScenario.cs" />
     <Compile Include="ValidationStep.cs" />
     <Compile Include="Validator.cs" />
-    <Compile Include="ValidationRegistry.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config">
